PR c++/3948 -- C++ ABI change, followup to 2001-12-18 patch.

* class.c (finish_struct_bits): Also set TREE_ADDRESSABLE for a
        type with a nontrivial destructor.

From-SVN: r50961